--- a/app/views/rssfeeds/index.html.erb
+++ b/app/views/rssfeeds/index.html.erb
@@ -14,6 +14,8 @@
       <td><%= rssfeed.title %></td>
       <td><%= rssfeed.feedurl %></td>
       <td><%= link_to 'Show', rssfeed_path(rssfeed) %></td>
+      <td><%= link_to 'Destroy', rssfeed_path(rssfeed),
+              method: :delete %></td>
     </tr>
   <% end %>
 </table>
